# KinectFusion_2022

./: .gitignore  CMakeLists.txt  RayCast.cu  RayCast.cuh  ReadMe.md  TSDF.cu  TSDF.cuh  TextureBinder.hpp  cuVector.cuh  device.cu  device.cuh  main.cu  read.hpp  test.cu
utils/: cutil_math.h  loguru.cpp  loguru.hpp  utils.cuh
